--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -57,6 +57,8 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+				<!--groupId>org.springframework.boot</groupId-->
+				<!--artifactId>spring-boot-maven-plugin</artifactId-->
+
 
 </project>
